--- a/PRATIK_SINGH_Lookalike.ipynb
+++ b/PRATIK_SINGH_Lookalike.ipynb
@@ -1,8 +1,157 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Import necessary libraries**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Load datasets**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customers = pd.read_csv('Customers.csv')\n",
+    "products = pd.read_csv('Products.csv')\n",
+    "transactions = pd.read_csv('Transactions.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Merge datasets**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transactions = transactions.merge(customers, on='CustomerID', how='left')\n",
+    "transactions = transactions.merge(products, on='ProductID', how='left')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Create customer profile**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_profiles = transactions.groupby('CustomerID').agg({\n",
+    "    'TotalValue': 'sum',\n",
+    "    'Quantity': 'sum',\n",
+    "    'ProductID': 'count',\n",
+    "    'Region': 'first'\n",
+    "}).reset_index()\n",
+    "customer_profiles.rename(columns={'ProductID': 'ProductCount'}, inplace=True)\n",
+    "customer_profiles = pd.get_dummies(customer_profiles, columns=['Region'], drop_first=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Standardise numerical features**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "numerical_features = ['TotalValue', 'Quantity', 'ProductCount']\n",
+    "customer_profiles[numerical_features] = scaler.fit_transform(customer_profiles[numerical_features])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Compute cosine similarity**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = customer_profiles.drop(columns=['CustomerID']).values\n",
+    "similarity_matrix = cosine_similarity(features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_top_3_lookalikes(customer_id, customer_profiles, similarity_matrix):\n",
+    "    customer_index = customer_profiles[customer_profiles['CustomerID'] == customer_id].index[0]\n",
+    "    similarity_scores = list(enumerate(similarity_matrix[customer_index]))\n",
+    "    similarity_scores = sorted(similarity_scores, key=lambda x: x[1], reverse=True)\n",
+    "    similarity_scores = [score for score in similarity_scores if score[0] != customer_index]\n",
+    "    top_3 = similarity_scores[:3]\n",
+    "    return [(customer_profiles.iloc[entry[0]]['CustomerID'], entry[1]) for entry in top_3]\n",
+    "\n",
+    "lookalike_results = {}\n",
+    "for customer_id in customer_profiles['CustomerID'][:20]:\n",
+    "    lookalike_results[customer_id] = get_top_3_lookalikes(customer_id, customer_profiles, similarity_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lookalike_data = []\n",
+    "for customer_id, lookalikes in lookalike_results.items():\n",
+    "    lookalike_data.append({\n",
+    "        'cust_id': customer_id,\n",
+    "        'lookalike1_id': lookalikes[0][0],\n",
+    "        'score1': lookalikes[0][1],\n",
+    "        'lookalike2_id': lookalikes[1][0],\n",
+    "        'score2': lookalikes[1][1],\n",
+    "        'lookalike3_id': lookalikes[2][0],\n",
+    "        'score3': lookalikes[2][1],\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -56,86 +205,9 @@
     }
    ],
    "source": [
-    "# Import necessary libraries\n",
-    "import pandas as pd\n",
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "# Load datasets\n",
-    "customers = pd.read_csv('Customers.csv')\n",
-    "products = pd.read_csv('Products.csv')\n",
-    "transactions = pd.read_csv('Transactions.csv')\n",
-    "\n",
-    "# Merge transactions with customers and products for enriched data\n",
-    "transactions = transactions.merge(customers, on='CustomerID', how='left')\n",
-    "transactions = transactions.merge(products, on='ProductID', how='left')\n",
-    "\n",
-    "# Create a customer profile feature set\n",
-    "customer_profiles = transactions.groupby('CustomerID').agg({\n",
-    "    'TotalValue': 'sum',          # Total spending\n",
-    "    'Quantity': 'sum',            # Total quantity purchased\n",
-    "    'ProductID': 'count',         # Product diversity (proxy for frequency)\n",
-    "    'Region': 'first'             # Region information\n",
-    "}).reset_index()\n",
-    "\n",
-    "# Rename 'ProductID' aggregation for clarity\n",
-    "customer_profiles.rename(columns={'ProductID': 'ProductCount'}, inplace=True)\n",
-    "\n",
-    "# One-hot encode the 'Region' column\n",
-    "customer_profiles = pd.get_dummies(customer_profiles, columns=['Region'], drop_first=True)\n",
-    "\n",
-    "# Standardise numerical features for similarity calculation\n",
-    "scaler = StandardScaler()\n",
-    "numerical_features = ['TotalValue', 'Quantity', 'ProductCount']\n",
-    "customer_profiles[numerical_features] = scaler.fit_transform(customer_profiles[numerical_features])\n",
-    "\n",
-    "# Compute Cosine Similarity\n",
-    "# Extract features for similarity calculation\n",
-    "features = customer_profiles.drop(columns=['CustomerID']).values\n",
-    "similarity_matrix = cosine_similarity(features)\n",
-    "\n",
-    "# Build the Lookalike Recommendations\n",
-    "def get_top_3_lookalikes(customer_id, customer_profiles, similarity_matrix):\n",
-    "    # Get the index of the given customer\n",
-    "    customer_index = customer_profiles[customer_profiles['CustomerID'] == customer_id].index[0]\n",
-    "    \n",
-    "    # Fetch similarity scores for this customer\n",
-    "    similarity_scores = list(enumerate(similarity_matrix[customer_index]))\n",
-    "    \n",
-    "    # Exclude the customer themselves and sort by similarity scores\n",
-    "    similarity_scores = sorted(similarity_scores, key=lambda x: x[1], reverse=True)\n",
-    "    similarity_scores = [score for score in similarity_scores if score[0] != customer_index]\n",
-    "    \n",
-    "    # Get the top 3 similar customers\n",
-    "    top_3 = similarity_scores[:3]\n",
-    "    top_3_customers = [\n",
-    "        (customer_profiles.iloc[entry[0]]['CustomerID'], entry[1]) for entry in top_3\n",
-    "    ]\n",
-    "    return top_3_customers\n",
-    "\n",
-    "# Generate lookalikes for the first 20 customers\n",
-    "lookalike_results = {}\n",
-    "for customer_id in customer_profiles['CustomerID'][:20]:\n",
-    "    lookalike_results[customer_id] = get_top_3_lookalikes(customer_id, customer_profiles, similarity_matrix)\n",
-    "\n",
-    "# Create a Lookalike.csv file\n",
-    "lookalike_data = []\n",
-    "for customer_id, lookalikes in lookalike_results.items():\n",
-    "    lookalike_data.append({\n",
-    "        'cust_id': customer_id,\n",
-    "        'lookalike1_id': lookalikes[0][0],\n",
-    "        'score1': lookalikes[0][1],\n",
-    "        'lookalike2_id': lookalikes[1][0],\n",
-    "        'score2': lookalikes[1][1],\n",
-    "        'lookalike3_id': lookalikes[2][0],\n",
-    "        'score3': lookalikes[2][1],\n",
-    "    })\n",
-    "\n",
     "lookalike_df = pd.DataFrame(lookalike_data)\n",
-    "lookalike_df.to_csv('Lookalike.csv', index=False)\n",
-    "\n",
-    "# Display the Lookalike DataFrame\n",
-    "print(lookalike_df)\n"
+    "lookalike_df.to_csv('Pratik_Singh_Lookalike.csv', index=False)\n",
+    "print(lookalike_df)"
    ]
   }
  ],
